fix: wrap up

--- a/src/components/csui/styles.scss
+++ b/src/components/csui/styles.scss
@@ -15,10 +15,14 @@
     .popout {
         width: 265px;
         margin: 0px 12px;
-        border-radius: var(--radius-4);
+    }
+
+    .editor {
         border: 1px solid var(--gray-4);
-        background-color: var(--color-panel-solid);
         box-shadow: var(--shadow-4);
+        border-radius: var(--radius-4);
+        background-color: var(--color-panel-solid);
+        overflow: hidden;
     }
 
     .close {
