--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -21,6 +21,5 @@
         padding: 12px 10px;
         resize: none;
         outline: none;
-        border-radius: var(--radius-4);
     }
 }
